fix: 페이지네이션 수정 #5

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -316,6 +316,11 @@
 
     if (cursorList.length == 0) {
         $('#before-button').hide();
+    } else if (cursor == -1) {
+        $('#after-button').hide();
+    } else if (cursor == 0) {
+        $('#after-button').hide();
+        $('#before-button').hide();
     }
 
     const categories = {
@@ -349,7 +354,7 @@
         '초등참고서': ['1학년', '2학년', '3학년', '4학년', '5학년', '6학년', 'EBS 초등', '경시 올림피아드', '국어전문교재', '수학전문교재', '미취학아동', '서술형.논술형', '영재교육원대비', '예비중', '전과 자습서', '영어전문교재', '초등학교 출판사별', '초등한국사', '중국어', '학습교구', '학습월간지(초등)', 'EBS초등학교/영어', '미취학아동/기타', '초등 학습자료 교구'],
         '예술': ['미디어', '건축', '대중문화', '무용', '미술 음악', '취미', '공연', '예술기행', '일반', '예술치료', '디자인'],
         '과학': ['공학', '교양과학', '농업', '의학', '물리학', '생명과학', '수학', '지구과학', '천문학', '화학'],
-    }
+    };
 
     categoryListing();
     $('#category').val(category).prop('selected', true);
