feat: 메인페이지 프론트 공백 입력 방지 추가#2

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -212,6 +212,25 @@
     }
 </script>
 
+<script>
+    function noSpaceForm(obj) {
+        let str_space = /\s{2}/; // 공백 2칸 체크
+        if (str_space.exec(obj.value)) {
+            alert("공백을 사용할 수 없습니다.");
+            obj.focus();
+            obj.value = obj.value.replace('  ', '');
+            return false
+        }
+
+    }
+
+    function search_keyword() {
+        let key_word = $('#search').val()
+        key_word = key_word.replace(/^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/gi, "");
+        $('#search').val(key_word);
+    }
+</script>
+
 <body>
 <div class="title-box">
     <h1 id="title">Godok</h1>
@@ -234,9 +253,9 @@
             <option selected value="">소분류</option>
         </select>
 
-        <input class="search" name="query" type="text" placeholder="검색어 입력" style="width: 470px">
+        <input class="search" id="search" name="query" type="text" placeholder="검색어 입력" style="width: 470px" onkeyup="noSpaceForm(this)" onchange="noSpaceForm(this);"/>
 
-        <button id="search_btn" type="submit" value="search" style="font-size: 13px; width:70px; height:60px;">검색</button>
+        <button id="search_btn" type="submit" value="search" style="font-size: 13px; width:70px; height:60px;" onclick="search_keyword()">검색</button>
     </form>
 </div>
 
