--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -228,6 +228,7 @@
         let key_word = $('#search').val()
         key_word = key_word.replace(/^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/gi, "");
         $('#search').val(key_word);
+        window.localStorage.clear();
     }
 </script>
 
