Feat: main 화면에 절판 표시
main에서 out_of_print 가져와서 절판 표시

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -370,6 +370,7 @@
             <div class="book-box" type="button" th:onclick="|location.href='@{/detail/{id}(id=${book.id})}'|">
                 <div  class="image-area">
                     <span th:if="${book.inventory==0}" ><strong><mark>품절</mark></strong></span>
+                    <span th:if="${book.outOfPrint==1}" ><strong><mark>절판</mark></strong></span>
                         <img th:src="${book.image}" alt="My Image" width="110" height="170"/>
                 </div>
                 <div  class="desc-area">
