--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -208,7 +208,9 @@
             <button class="order-btn" type="button" onclick="buybook()" th:if="${not #strings.isEmpty(session.loginMember)}">주문하기</button>
             <button class="order-btn" type="button" onclick="location.href='../login'" th:if="${#strings.isEmpty(session.loginMember)}">로그인먼저</button>
         </div>
-        <span th:if="${info.inventory == 0}">주문할 수 없습니다.</span>
+        <span th:if="${info.inventory == 0}">품절!</span>
+        <span th:if="${info.inventory == 0}">절판!</span>
+
       </form>
     </div>
   </div>
