Fix: 품절 포함 선택 셀렉트 박스 반응형으로

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -115,6 +115,10 @@
             width: 80%;
         }
 
+        #inventory{
+            width: 80%;
+        }
+
         /*책 정보 영역*/
         .body-area {
             width: 75%;
